Add basic Header section

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,11 +10,21 @@
     <header>
       <h1>Fool Me Twice</h1>
       <h2>Sourboots</h2>
+
+      <div class="header-img">
+        <picture>
+          <source srcset="images/logo-photo.webp" type="image/webp" />
+          <source srcset="images/logo-photo.jpg" type="image/jpeg" />
+          <img
+            src="images/logo-photo.jpg"
+            alt=""
+          />
+      </div>
     </header>
 
     <section class="social">
       <div class="music-video">
-        <iframe
+        <!-- <iframe
           width="560"
           height="315"
           src="https://www.youtube.com/embed/hnp1pt8biD4?controls=0"
@@ -22,7 +32,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
-        ></iframe>
+        ></iframe> -->
       </div>
 
       <div class="streaming">
