Implement mobile newsletter signup

--- a/src/index.html
+++ b/src/index.html
@@ -152,11 +152,12 @@
     <section class="newsletter">
       <h2>Subscribe to our newsletter</h2>
       <form>
+        <label for="email">Email Address</label>
         <input
           type="text"
           name="email"
           id="email"
-          placeholder="Email (ex. name @example.com)"
+          placeholder="Email Address"
         />
         <input class="cta-link" type="submit" value="Subscribe" />
       </form>
