Style footer element

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Lato&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <title>Fool Me Twice - Sourboots</title>
   </head>
   <body>
@@ -17,10 +20,8 @@
         <picture>
           <source srcset="images/logo-photo.webp" type="image/webp" />
           <source srcset="images/logo-photo.jpg" type="image/jpeg" />
-          <img
-            src="images/logo-photo.jpg"
-            alt=""
-          />
+          <img src="images/logo-photo.jpg" alt="" />
+        </picture>
       </div>
     </header>
 
@@ -36,11 +37,8 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-
         </div>
       </div>
-
-      
 
       <div class="album-cover">
         <picture>
@@ -163,7 +161,14 @@
       </form>
     </section>
 
-    <footer>(footer)</footer>
+    <footer>
+      <p>
+        Website design created by Alexander Morse, as part of his
+        <a href="https://10in30.alexander-morse.com"
+          >Spring Web Development Challenge</a
+        >. This sample web page was created as an exercise, using stock imagery.
+      </p>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
