Style newsletter component for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -150,13 +150,15 @@
     <section class="newsletter">
       <h2>Subscribe to our newsletter</h2>
       <form>
-        <label for="email">Email Address</label>
-        <input
-          type="text"
-          name="email"
-          id="email"
-          placeholder="Email Address"
-        />
+        <div class="form-control">
+          <label for="email">Email Address</label>
+          <input
+            type="text"
+            name="email"
+            id="email"
+            placeholder="Email Address"
+          />
+        </div>
         <input class="cta-link" type="submit" value="Subscribe" />
       </form>
     </section>
