Migrate to Parcel v2

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Lato&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./styles.scss">
     <title>Fool Me Twice - Sourboots</title>
   </head>
   <body>
